recursion.cons.increasing.Increasing.scala.error
Erreur de compilation :
Increasing:3: error: value and is not a member of Boolean
  if (l.tail!=Nil and l.tail.tail==Nil) {
                  ^